--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,7 +25,7 @@
 
         <footer class="footer mt-auto pt-5 pb-3 small text-center">
             <div class="container">
-                <span class="text-muted">© <script>document.write(new Date().getFullYear())</script>&nbsp;Signature Mint. |
+                <span class="text-muted">© <script>document.write(new Date().getFullYear())</script>&nbsp;Very Good Garage. |
                 <a href="/">Home</a> |
                 {{/* <a href="/contact/">Contact</a> | */}}
                 <a href="/privacy/">Privacy</a> |
