--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ define "title" }}{{ .Title }} &ndash; {{ .Site.Title }}{{ end }}
 
 {{ define "main" }}
-<div class="container pt-5">
-  <h1 class="mb-4">{{ .Title }}</h1>
-  {{ .Content }}
+<div class="container pt-5" style="max-width:700px">
+    <h1 class="mb-4">{{ .Title }}</h1>
+    {{ .Content }}
 </div>
 {{ end }}
