--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,1 @@
-{{ define "main" }}
-<div class="container pt-5 text-center">
-  {{ .Content }}
-</div>
-{{ end }}
+{{ define "main" }}{{ .Content }}{{ end }}
