fix footer spaces

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -181,12 +181,12 @@
                     <div class="col-auto">
 
                         <!-- Payment methods -->
-                        <i class="fab fa-lg fa-cc-mastercard"></i>
-                        <i class="fab fa-lg fa-cc-visa"></i>
-                        <i class="fab fa-lg fa-cc-amex"></i>
-                        <i class="fab fa-lg fa-cc-paypal"></i>
-                        <i class="fab fa-lg fa-bitcoin"></i>
-                        <i class="fab fa-lg fa-monero"></i>
+                        <i class="fab fa-lg fa-cc-mastercard"></i>&nbsp;
+                        <i class="fab fa-lg fa-cc-visa"></i>&nbsp;
+                        <i class="fab fa-lg fa-cc-amex"></i>&nbsp;
+                        <i class="fab fa-lg fa-cc-paypal"></i>&nbsp;
+                        <i class="fab fa-lg fa-bitcoin"></i>&nbsp;
+                        <i class="fab fa-lg fa-monero"></i>&nbsp;
                         <i class="fab fa-lg fa-ethereum"></i>
                     </div>
                 </div>
