meta description and sticky footer fix

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,6 +9,19 @@ $headings-font-family: "AXIS Extra Bold";
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
+html, body {
+    min-height: 100vh;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+#main {
+    flex: 1;
+}
+
 label[disabled], a[disabled] {
     opacity: .65;
     pointer-events: none;
