dont minify resources on dev

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {{ $style := resources.Get "sass/main.scss" | toCSS | minify | fingerprint }}
+    {{ $style := resources.Get "sass/main.scss" | toCSS | fingerprint }}
     <link rel="stylesheet" href="{{ $style.Permalink }}">
     <link href=https://use.fontawesome.com/releases/v5.13.1/css/all.css rel=stylesheet>
 
@@ -202,9 +202,8 @@
     </footer>
 
     <script src="https://polyfill.io/v3/polyfill.js?features=es5,es6,es7&flags=gated"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
+    {{ $js := resources.Get "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" | fingerprint}}
+    <script src="{{ $js.Permalink }}"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-J6G1HMN57E"></script>
