temp disabled app.js include

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -204,7 +204,7 @@
     <script src="https://polyfill.io/v3/polyfill.js?features=es5,es6,es7&flags=gated"></script>
     <script>var axios, intlTelInput, Ladda;</script>
 
-    {{ $js := resources.Get "node_modules/bootstrap-5/dist/js/bootstrap.bundle.min.js" | fingerprint }}
+    {{ $js := resources.Get "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" | fingerprint }}
     <script src="{{ $js.Permalink }}"></script>
 
     {{ range .Params.js }}
@@ -224,8 +224,8 @@
         };
     }
     </script>
-    {{ $js := resources.Get "js/app.js" | fingerprint }}
-    <script src="{{ $js.Permalink }}"></script>
+    {{/* {{ $js := resources.Get "js/app.js" | fingerprint }}
+    <script src="{{ $js.Permalink }}"></script> */}}
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-J6G1HMN57E"></script>
