--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -163,6 +163,12 @@
                                 <a href="{{$.Site.Params.youtube}}">YouTube</a>
                             </li>
                             <li>
+                                <a href="{{$.Site.Params.discord}}">Discord</a>
+                            </li>
+                            <li>
+                                <a href="{{$.Site.Params.reddit}}">Reddit</a>
+                            </li>
+                            <li>
                                 <a href="{{$.Site.Params.instagram}}">Instagram</a>
                             </li>
                             <li>
